Update AvroSchemaResolver.java